# vim: set sw=8 ts=8 sts=8 noet:

NULL =

EXTRA_DIST = org.gnome.desktop.archives.gschema.xml

gsettings_ENUM_NAMESPACE = org.gnome.desktop.archives
gsettings_ENUM_FILES = $(top_srcdir)/gnome-autoar/autoar-format-filter.h

gsettings_SCHEMAS = org.gnome.desktop.archives.gschema.xml

@GSETTINGS_RULES@
